@@ -85,6 +85,9 @@ g_array_free (GArray *array,
 	      gboolean free_segment)
 {
 	gchar* rv = NULL;
+
+	g_return_val_if_fail (array != NULL, NULL);
+
 	if (free_segment)
 		g_free (array->data);
 	else
@@ -101,6 +104,8 @@ g_array_append_vals (GArray *array,
 		     guint len)
 {
 	GArrayPriv *priv = (GArrayPriv*)array;
+
+	g_return_val_if_fail (array != NULL, NULL);
 
 	ensure_capacity (priv, priv->array.len + len + (priv->zero_terminated ? 1 : 0));
   
@@ -126,8 +131,11 @@ g_array_insert_vals (GArray *array,
 		     guint len)
 {
 	GArrayPriv *priv = (GArrayPriv*)array;
+	guint extra = (priv->zero_terminated ? 1 : 0);
 
-	ensure_capacity (priv, array->len + len + (priv->zero_terminated ? 1 : 0));
+	g_return_val_if_fail (array != NULL, NULL);
+
+	ensure_capacity (priv, array->len + len + extra);
   
 	/* first move the existing elements out of the way */
 	memmove (element_offset (priv, index_ + len),
@@ -135,7 +143,7 @@ g_array_insert_vals (GArray *array,
 		 element_length (priv, array->len - index_));
 
 	/* then copy the new elements into the array */
-	memmove (element_offset (priv, array->len),
+	memmove (element_offset (priv, index_),
 		 data,
 		 element_length (priv, len));
 
@@ -156,6 +164,8 @@ g_array_remove_index (GArray *array,
 {
 	GArrayPriv *priv = (GArrayPriv*)array;
 
+	g_return_val_if_fail (array != NULL, NULL);
+
 	memmove (element_offset (priv, index_),
 		 element_offset (priv, index_ + 1),
 		 element_length (priv, array->len - index_));
@@ -170,3 +180,4 @@ g_array_remove_index (GArray *array,
 
 	return array;
 }
+
